samples/_failures_safe/1761502989_d9c2ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da7235c3.c:148: error: expected ‘;’, ‘,’ or ‘)’ at end of input
